<resources>
    <string name="app_name">App</string>
    <string name="t_one">1</string>
    <string name="t_two">2</string>
    <string name="t_three">3</string>
    <string name="t_four">4</string>
    <string name="t_five">5</string>
    <string name="t_six">6</string>
    <string name="t_seven">7</string>
    <string name="t_eight">8</string>
    <string name="t_nine">9</string>
    <string name="t_zero">0</string>


    <string name="t_enter_password_eng">Enter password</string>
    <string name="finger_print_eng">Fingerprint</string>
    <string name="delete_eng">Delete last symbol</string>
    <string name="accept_eng">Accept</string>
    <string name="settings_page_eng">Settings page</string>
    <string name="one_page_higher_eng">One page higher</string>
    <string name="title_activity_choosing_themes_eng">ChoosingThemes Activity</string>
    <string name="t_light_theme_eng">Light</string>
    <string name="t_dark_theme_eng">Dark</string>
    <string name="t_change_pin_eng">Change password</string>
    <string name="t_enter_new_pin_eng">Enter new password</string>
    <string name="t_settings_page_eng">Settings</string>
    <string name="msg_incorrect_password_t">Incorrect code</string>
    <string name="name_sp_settings">SETTINGS_PREFERENCES</string>
    <string name="descr_enter_password_eng">Enter password</string>
    <string name="descr_repeat_password_eng">Repeat password</string>
    <string name="t_email_input_eng">Define email</string>
    <string name="t_entry_eng">Entry</string>
    <string name="t_registration_eng">Register</string>
    <string name="t_continue_eng">Continue</string>
    <string name="t_email_eng"> Email</string>
    <string name="t_password_eng"> Password</string>
    <string name="t_was_registered_eng">Entry</string>
    <string name="t_exit_button_eng">Log out of account</string>
    <string name="t_plan_eng">Plan</string>
    <string name="t_report_eng">Report</string>
    <string name="t_registration_page_eng">Registration</string>
    <string name="t_wealth_family">WealthFamily</string>
    <string name="t_entry_wf_eng">Entry into WealthFamily</string>
    <string name="t_remember_user_eng">Remember user</string>
    <string name="t_forgot_password_eng">Forgot password?</string>
    <string name="t_changing_profile_password_eng">Change password</string>
    <string name="t_enter_code_from_letter_eng">Enter code from the message</string>
    <string name="t_enter_new_password_eng">Enter new password</string>
    <string name="t_approve_new_password_eng">Confirm new password</string>
    <string name="t_change_password_eng">Change password</string>
    <string name="t_create_password_eng">Imagine password</string>
    <string name="t_imagine_password_eng">Create password</string>
    <string name="t_approve_pin_eng">Confirm password</string>
    <string name="t_income_eng">Income</string>
    <string name="t_expenses_eng">Expenses</string>
    <string name="t_3_months_eng">3 months</string>
    <string name="t_6_months_eng">6 months</string>
    <string name="t_2024">2024</string>
    <string name="t_at_all_eng">At all</string>
    <string name="t_sum_eng">Sum</string>
    <string name="t_category_eng">Category</string>
    <string name="t_date_eng">Date</string>
    <string name="t_time_eng">Time</string>
    <string name="t_recipient_eng">Recipient</string>
    <string name="t_type_eng">Type</string>
    <string name="t_comment_eng">Comment</string>
    <string name="t_theme_eng">Theme</string>
    <string name="t_operations_eng">Operations</string>

    <string name="t_enter_password">Введите пароль</string>
    <string name="finger_print">Отпечаток пальца</string>
    <string name="delete">Удалить последний символ</string>
    <string name="accept">Подтвердить</string>
    <string name="settings_page">Страница настроек</string>
    <string name="one_page_higher">Перейти на предыдущую страницу</string>
    <string name="title_activity_choosing_thems">ChoosingThemsActivity</string>
    <string name="t_light_theme">Светлая</string>
    <string name="t_dark_theme">Тёмная</string>
    <string name="dark_radio_button">Переключатель на тёмную тему приложения</string>
    <string name="change_theme_button">Изменить темы оформления приложения</string>
    <string name="change_pin">Изменить код входа</string>
    <string name="t_enter_new_pin">Введите новый пароль</string>
    <string name="t_settings_page">Настройки</string>
    <string name="msg_incorrect_password">Некорректный код безопасности</string>
    <string name="descr_enter_password">Введите пароль</string>
    <string name="descr_repeat_password">Повторите пароль</string>
    <string name="t_email_input">Укажите почту</string>
    <string name="t_entry">Войти</string>
    <string name="t_registration">Зарегистрироваться</string>
    <string name="t_continue">Продолжить</string>
    <string name="t_email"> Почта</string>
    <string name="t_password"> Пароль</string>
    <string name="t_was_registered">Вход</string>
    <string name="t_exit_button">Выйти из учётной записи</string>
    <string name="t_plan">План</string>
    <string name="t_report">Отчёт</string>
    <string name="t_registration_page">Регистрация</string>
    <string name="t_entry_wf">Войти в WealthFamily</string>
    <string name="t_remember_user">Запомнить пользователя</string>
    <string name="t_forgot_password">Забыли пароль?</string>
    <string name="t_changing_profile_password">Смена пароля</string>
    <string name="t_enter_code_from_letter">Введите код из письма</string>
    <string name="t_enter_new_password">Введите новый пароль</string>
    <string name="t_approve_new_password">Подтвердите новый пароль</string>
    <string name="t_change_password">Сменить пароль</string>
    <string name="t_create_password">Придумайте пароль</string>
    <string name="t_imagine_password">Создайте пароль</string>
    <string name="t_approve_pin">Подтвердите пароль</string>
    <string name="t_income">Доходы</string>
    <string name="t_expenses">Расходы</string>
    <string name="t_3_months">3 мес.</string>
    <string name="t_6_months">6 мес.</string>
    <string name="t_at_all">Всего</string>
    <string name="t_sum">Сумма</string>
    <string name="t_category">Категория</string>
    <string name="t_date">Дата</string>
    <string name="t_time">Время</string>
    <string name="t_recipient">Получатель</string>
    <string name="t_type">Тип</string>
    <string name="t_theme">Тема</string>
    <string name="t_comment">Комментарий</string>
    <string name="t_operations">Операции</string>
</resources>