<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F6F6"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/passwordInfoLayoutChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:background="#EBEDFA"
        android:orientation="vertical"
        android:paddingBottom="50px">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="110dp"
            android:layout_weight="1"
            android:accessibilityLiveRegion="polite"
            android:fontFamily="@font/b612_mono"
            android:gravity="center"
            android:text="@string/t_enter_new_pin"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textColor="#26085C"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30px"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/b612_mono"
                android:text="Цифр введено:"
                android:textColor="#E91E63"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/passwordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/b612_mono"
                android:text="0"
                android:textColor="#E91E63"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordEnteringLayoutChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInfoLayoutChange"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:paddingTop="0px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onOneClicked"
                android:text="@string/t_one"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="90"
                android:fontFamily="serif"
                android:onClick="onTwoClicked"
                android:text="@string/t_two"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onThreeClicked"
                android:text="@string/t_three"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onFourClicked"
                android:text="@string/t_four"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onFiveClicked"
                android:text="@string/t_five"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onSixClicked"
                android:text="@string/t_six"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onSevenClicked"
                android:text="@string/t_seven"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button8"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="90"
                android:fontFamily="serif"
                android:onClick="onEightClicked"
                android:text="@string/t_eight"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button9"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onNineClicked"
                android:text="@string/t_nine"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/fingerPrint"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00F8F6F6"
                android:contentDescription="@string/finger_print"
                android:src="?android:attr/fingerprintAuthDrawable" />

            <Button
                android:id="@+id/button0"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:onClick="onZeroClicked"
                android:text="@string/t_zero"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F8F6F6"
                android:contentDescription="@string/delete"
                android:onClick="onBackSpaceClicked"
                android:src="?android:attr/actionModeCloseDrawable" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>