<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_light"
    tools:context=".ChangingPasswordActivity">

    <TextView
        android:id="@+id/textViewWealthFamilyChangingPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:contextClickable="false"
        android:fontFamily="@font/montserrat"
        android:text="@string/t_wealth_family"
        android:textAlignment="center"
        android:textColor="#1F5CB6"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/changingPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewWealthFamilyChangingPassword"
        android:layout_marginStart="20dip"
        android:layout_marginTop="50dip"
        android:layout_marginEnd="20dip"
        android:background="@drawable/roundrect_light"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginTop="30dip"
            android:layout_marginEnd="10dip"
            android:fontFamily="@font/montserrat"
            android:text="@string/t_changing_profile_password"
            android:textAlignment="center"
            android:textColor="#1F5CB6"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPasswordChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dip"
            android:layout_marginTop="30dip"
            android:layout_marginEnd="20dip"
            android:background="@drawable/roundrect_white"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/t_enter_new_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPasswordApproveChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dip"
            android:layout_marginTop="30dip"
            android:layout_marginEnd="20dip"
            android:background="@drawable/roundrect_white"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/t_approve_new_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dip"
            android:layout_marginTop="30dip"
            android:layout_marginEnd="20dip"
            android:layout_marginBottom="3dip"
            android:background="@drawable/roundrect"
            android:fontFamily="@font/montserrat"
            android:onClick="onChangePasswordButtonClicked"
            android:text="@string/t_change_password"
            android:textAlignment="center"
            android:textColor="#F2F2F2"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/registrationButtonChangingPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changingPasswordLayout"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/roundrect_gray"
        android:fontFamily="@font/montserrat"
        android:onClick="onRegistrationButtonClicked"
        android:text="@string/t_registration"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />
</RelativeLayout>