<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/b612_mono"
        android:text="@string/t_email_input"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:fontFamily="@font/b612_mono"
        android:hint="@string/descr_email_input"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/b612_mono"
        android:text="@string/descr_enter_password"
        android:textAlignment="center"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:fontFamily="@font/b612_mono"
        android:hint="****"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="22sp" />

    <Button
        android:id="@+id/entryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:onClick="onEntryLoginButtonClicked"
        android:text="@string/t_entry" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:onClick="onRegistrationButtonClicked"
        android:text="@string/t_registration" />

</LinearLayout>